# tt-smi-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  comparison_report.md
src/: error.rs  main.rs
src/app/: mod.rs
src/backend/: mod.rs  tt_hardware.rs
src/telemetry/: history.rs  mod.rs
src/ui/: device_info.rs  firmware.rs  help.rs  mod.rs  telemetry.rs  theme.rs
src/utils/: mod.rs
